--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.2",
+    "@types/passport": "^1.0.16",
+    "crypto-ts": "^1.0.2",
     "express": "^4.19.2",
     "mongoose": "^8.4.1",
     "socket.io": "^4.7.5",
