--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/passport": "^1.0.16",
     "crypto-ts": "^1.0.2",
     "express": "^4.19.2",
+    "express-validator": "^7.1.0",
     "mongoose": "^8.4.1",
     "socket.io": "^4.7.5",
     "typescript": "^5.4.5"
