--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/express-validator": "^3.0.0",
     "dotenv": "^16.4.5",
     "nodemon": "^3.1.3",
     "ts-node": "^10.9.2"
