--- a/package.json
+++ b/package.json
@@ -15,20 +15,24 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.14.2",
     "@types/passport": "^1.0.16",
+    "@types/uuid": "^9.0.8",
     "bcrypt": "^5.1.1",
     "crypto-ts": "^1.0.2",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
+    "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "socket.io": "^4.7.5",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express-validator": "^3.0.0",
+    "@types/js-yaml": "^4.0.9",
+    "@types/node": "^20.14.2",
     "dotenv": "^16.4.5",
     "nodemon": "^3.1.3",
     "ts-node": "^10.9.2"
